third_party/WebKit/LayoutTests/fast/js/script-tests/regexp-literals-arent-constants.js
@@ -4,7 +4,7 @@ description("This test ensures that regeular expression literals are constants, 
 for (var i = 0; i < 2; i++) {
     currentRegExp = /a/;
     if (i)
-        shouldBe("currentRegExp", "lastRegExp");
+        shouldBeFalse("currentRegExp === lastRegExp");
     lastRegExp = currentRegExp;
 }
 
@@ -12,7 +12,7 @@ function test1() {
     for (var i = 0; i < 2; i++) {
         currentRegExp = /a/;
         if (i)
-            shouldBe("currentRegExp", "lastRegExp");
+            shouldBeFalse("currentRegExp === lastRegExp");
         lastRegExp = currentRegExp;
     }
 }
@@ -20,7 +20,7 @@ test1();
 
 function returnRegExpLiteral() { return /a/ }
 
-shouldBe("returnRegExpLiteral()", "returnRegExpLiteral()");
+shouldBeFalse("returnRegExpLiteral() === returnRegExpLiteral()");
 
 function returnConditionalRegExpLiteral(first) {
     if (first)
@@ -28,10 +28,10 @@ function returnConditionalRegExpLiteral(first) {
     return /a/;
 }
 
-shouldBe("returnConditionalRegExpLiteral(true)", "returnConditionalRegExpLiteral(true)");
-shouldBe("returnConditionalRegExpLiteral(false)", "returnConditionalRegExpLiteral(false)");
+shouldBeFalse("returnConditionalRegExpLiteral(true) === returnConditionalRegExpLiteral(true)");
+shouldBeFalse("returnConditionalRegExpLiteral(false) === returnConditionalRegExpLiteral(false)");
 shouldBeFalse("returnConditionalRegExpLiteral(true) === returnConditionalRegExpLiteral(false)");
 returnRegExpLiteral().someAddedProperty = true;
-shouldBeTrue("returnRegExpLiteral().someAddedProperty");
+shouldBeUndefined("returnRegExpLiteral().someAddedProperty");
 
 var successfullyParsed = true;
